# diffmonger

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: codeql.yml
libs/util/: CMakeLists.txt
libs/util/include/diffmonger/util/: FdOwner.hpp  PasswordBuffer.hpp  PidOwner.hpp  Serialisation.hpp  Uuid.hpp  array.hpp  finally.hpp  ioutil.hpp  misc.hpp  transform_iterator.hpp
libs/util/include/diffmonger/util/parser/: Parser.hpp
libs/util/src/: FdOwner.cpp  PasswordBuffer.cpp  Uuid.cpp  ioutil.cpp
simulation/: disk-usage-analysis.cpp
src/: BackendDriver.cpp  BackendDriver.hpp  CommandLineInterface.cpp  CommandLineInterface.hpp  Controller.cpp  Controller.hpp  EncryptionUtil.cpp  EncryptionUtil.hpp  KeyPair.cpp  KeyPair.hpp  Node.hpp  RepositoryParams.hpp  RepositoryStructure.cpp  RepositoryStructure.hpp  Trust.cpp  Trust.hpp  ZfsDriver.cpp  ZfsDriver.hpp  cstdio-util.cpp  cstdio-util.hpp  diffmonger.hpp  main.cpp  sysutil.cpp  sysutil.hpp  zfs.cpp  zfs.hpp
test/: node.cpp
test/integration-test/: test.sh
tools/: numberline-visualisation.pl  tikz-visualisation-special-nodes-only.pl  tikz-visualisation.pl
